crates/convd/tests/snapshots/rule_provider_test__test_rule_provider_surge_boslife_Subscription_policy.snap
---
source: crates/convd/tests/rule_provider_test.rs
expression: actual
---
// Subscription Direct
DOMAIN,localhost
